--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,6 +24,6 @@
     </context-param>
     <context-param>
         <param-name>db-password</param-name>
-        <param-value>fedora</param-value>
+        <param-value>diouriyouri</param-value>
     </context-param>
 </web-app>
